[package]
name = "auth-lib"
version = "0.1.6"
edition = "2024"
publish = ["bondinary-bondinary-rust-crates"]

[dependencies]
# common-lib = { path = "../common-lib" }
common-lib = { version = "0.1.1" }

urlencoding = "2.1.3"
phonenumber = "0.3.7"
once_cell = "1.17.0"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.11", features = ["multipart", "json"] } # reqwest with JSON parsing support
serde_json = "1.0.88"
serde = "1.0.188"
openssl = { version = "0.10", default-features = false } # no "vendored"
tracing = "0.1.41"
rocket = { version = "0.5.0-rc.3", default-features = false, features = ["json"] }
rocket_okapi = { version = "0.8.0-rc.3", features = ["swagger", "rapidoc"] }

[features]
impl_json_schema = [] # An empty array means it doesn't enable other features by default
